# adventofcode2024

./: .gitignore  CMakeLists.txt  README.md  bytes.txt  check.txt  checkvalid.txt  moves.txt  ¨
files/: day_07_test1.txt  day_07_test2.txt  day_24.txt
src/: main.cpp
src/challenges/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
src/include/: day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h
